--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -149,3 +149,20 @@ textarea:focus {
     padding-bottom: 6px;
     border-bottom: 2px solid #009788;
 }
+
+textarea ::-webkit-scrollbar{
+    width: 13px;
+    height: 13px;
+    }
+    ::-webkit-scrollbar-thumb{
+    background: #C2C2C2;
+    border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb:hover{
+    background: #B1B2B5;
+    }
+    ::-webkit-scrollbar-track{
+    background: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: inset 7px 10px 12px 0px #F0F0F0;
+    }
